# ReverseLoop

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
data/golden_dataset/: images.json
evaluations/: run_eval.py
reverse_loop/: app.py  config.py
reverse_loop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reverse_loop/agents/: market.py  vision.py
reverse_loop/tools/: calculator.py  ebay_client.py
tests/: debug_pytest.py  test_math.py  test_vision.py
